--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -120,10 +120,10 @@ const ogImageURL = new URL(ogImage, Astro.site);
                     <a href="/zodiac-daily" class="nav-link submenu-link">Zodiac Tarot</a>
                 </div>
             </div>
-            
+            <a href="/than-so-hoc" class="nav-link">Thần số học</a>
             <a href="/about-us" class="nav-link">Về chúng tôi</a>
             <a href="/cards" class="nav-link">Các lá bài Tarot</a>
-            <a href="/blog" class="nav-link">Blogs</a>
+            <a href="/blog" class="nav-link">Blog</a>
             <a href="/contact" class="nav-link">Liên hệ</a>
             <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
         </div>
