--- a/src/pages/ket-qua-than-so-hoc.astro
+++ b/src/pages/ket-qua-than-so-hoc.astro
@@ -515,11 +515,11 @@ const pageTitle = `Hồ Sơ: ${fullName}`;
                     </div>
                 </div>
 
-                <div class="report-footer text-center pb-12 pt-8" style="margin-top: 5rem;">
+                <!--<div class="report-footer text-center pb-12 pt-8" style="margin-top: 5rem;">
                     <a href="/than-so-hoc" class="mystic-btn-outline">
                         <i class="fas fa-redo"></i> Tra cứu hồ sơ khác
                     </a>
-                </div>
+                </div>-->
                 
             </div> </section> </main>
     <div id="toc-container" class="toc-wrapper">
@@ -533,7 +533,9 @@ const pageTitle = `Hồ Sơ: ${fullName}`;
         </nav>
     </div>
 
-    <div class="cta-section-wrapper fade-in-up" style="margin-top: 6rem; margin-bottom: 4rem;">
+    <div class="divider-section"></div>
+
+    <div class="cta-section-wrapper fade-in-up" style="margin-bottom: 4rem;display:flex; justify-content:center;">
         <div class="cta-tarot-card">
             <div class="cta-bg-glow"></div>
             
