--- a/src/components/OracleChat.astro
+++ b/src/components/OracleChat.astro
@@ -282,7 +282,7 @@
   function initChat() {
     loadHistory();
     if (messagesContainer.children.length === 0) {
-        addMessage("Chào bạn nè 👋 Mình là Joana. Hôm nay tâm trạng bạn thế nào? Có chuyện gì muốn kể cho mình nghe hông?", 'bot', false, false);
+        addMessage("Chào bạn 👋 Mình là Joana, trợ lý ảo của Phở Gõ Tarot. Hôm nay tâm trạng bạn thế nào? Có chuyện gì muốn kể cho mình nghe hông?", 'bot', false, false);
     }
   }
 
