--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -80,6 +80,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
   title={`${post.data.title} - Phở Gõ Tarot`}
   description={post.data.excerpt}
   ogImage={post.data.image}
+  showChatbot={false}
 >
   <main id="homepage-content">
     <section class="homepage-section" style="padding-top: 4rem; min-height: 80vh;">
