--- a/src/pages/ket-qua-than-so-hoc.astro
+++ b/src/pages/ket-qua-than-so-hoc.astro
@@ -162,7 +162,7 @@ userChallenges.forEach(c => {
 const pageTitle = `Hồ Sơ: ${fullName}`;
 ---
 
-<BaseLayout title={pageTitle}>
+<BaseLayout title={pageTitle} showChatbot={false}>
     <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
     <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.2.0/chartjs-plugin-datalabels.min.js"></script>
     <script is:inline src="/js/numerology-charts.js"></script>
