--- a/src/pages/cards/[slug].astro
+++ b/src/pages/cards/[slug].astro
@@ -56,8 +56,7 @@ const groupName = group.charAt(0).toUpperCase() + group.slice(1);
 <BaseLayout
   title={`${title} - Phở Gõ Tarot`}
   description={excerpt}
-  ogImage={image}
->
+  ogImage={image} showChatbot={false}>
   <main id="homepage-content">
     <section class="homepage-section" style="padding-top: 4rem; min-height: 80vh;">
       <div class="container">
